wip picard merge