@@ -30,7 +30,6 @@ import java.io.IOException;
 import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -42,9 +41,11 @@ import java.util.stream.Collectors;
 
 public class StockCommands {
     @Command(desc = "Create a share buy offer")
-    public String buy(StockDB db, @Me DBNation me, Exchange exchange, double quantity, @Range(min=0.01) @Step(0.01) double maxprice) {
-        if (!exchange.canView(me)) return exchange.name + " requires you to be " + exchange.requiredRank + " to buy/sell";
-        if (exchange.id == ResourceType.MONEY.ordinal() || exchange.id == ResourceType.CREDITS.ordinal()) throw new IllegalArgumentException("Cannot buy/sell " + exchange.symbol);
+    public String buy(StockDB db, @Me DBNation me, Exchange exchange, double quantity, @Range(min = 0.01) @Step(0.01) double maxprice) {
+        if (!exchange.canView(me))
+            return exchange.name + " requires you to be " + exchange.requiredRank + " to buy/sell";
+        if (exchange.id == ResourceType.MONEY.ordinal() || exchange.id == ResourceType.CREDITS.ordinal())
+            throw new IllegalArgumentException("Cannot buy/sell " + exchange.symbol);
         Map.Entry<Long, Long> currentPrice = db.getCurrentPrice(exchange.id);
         long priceLong = (long) (maxprice * 100);
         long quantityLong = (long) (quantity * 100);
@@ -56,7 +57,7 @@ public class StockCommands {
             open.removeIf(f -> f.buyer != 0);
             open.removeIf(f -> f.price > priceLong);
             if (!open.isEmpty()) {
-                Collections.sort(open, (o1, o2) -> Long.compare(o1.price, o2.price));
+                open.sort(Comparator.comparingLong(o -> o.price));
                 for (StockTrade trade : open) {
                     // TODO dont buy from yourself
                     if (quantityLong <= 0) break;
@@ -90,9 +91,11 @@ public class StockCommands {
     }
 
     @Command(desc = "Create a sell offer. If buy offers are available for that price, it will be filled (with confirmation)")
-    public String sell(StockDB db, @Me DBNation me, Exchange exchange, double quantity, @Range(min=0.01) @Step(0.01) double minprice) {
-        if (!exchange.canView(me)) return exchange.name + " requires you to be " + exchange.requiredRank + " to buy/sell";
-        if (exchange.id == ResourceType.MONEY.ordinal() || exchange.id == ResourceType.CREDITS.ordinal()) throw new IllegalArgumentException("Cannot buy/sell " + exchange.symbol);
+    public String sell(StockDB db, @Me DBNation me, Exchange exchange, double quantity, @Range(min = 0.01) @Step(0.01) double minprice) {
+        if (!exchange.canView(me))
+            return exchange.name + " requires you to be " + exchange.requiredRank + " to buy/sell";
+        if (exchange.id == ResourceType.MONEY.ordinal() || exchange.id == ResourceType.CREDITS.ordinal())
+            throw new IllegalArgumentException("Cannot buy/sell " + exchange.symbol);
         Map.Entry<Long, Long> currentPrice = db.getCurrentPrice(exchange.id);
         long priceLong = (long) (minprice * 100);
         long quantityLong = (long) (quantity * 100);
@@ -104,7 +107,7 @@ public class StockCommands {
             open.removeIf(f -> f.seller != 0);
             open.removeIf(f -> f.price < priceLong);
             if (!open.isEmpty()) {
-                Collections.sort(open, (o1, o2) -> Long.compare(o2.price, o1.price));
+                open.sort((o1, o2) -> Long.compare(o2.price, o1.price));
                 for (StockTrade trade : open) {
                     // TODO dont buy from yourself
                     if (quantityLong <= 0) break;
@@ -146,9 +149,9 @@ public class StockCommands {
         StringBuilder response = new StringBuilder();
         for (StockTrade trade : myTrades) {
             if (db.deleteTrade(trade.tradeId)) {
-                response.append("Deleted trade:\n" + trade.toString());
+                response.append("Deleted trade:\n").append(trade);
             } else {
-                response.append("Failed to delete trade:\n" + trade.toString());
+                response.append("Failed to delete trade:\n").append(trade);
             }
         }
         return response.toString();
@@ -164,9 +167,9 @@ public class StockCommands {
         StringBuilder response = new StringBuilder();
         for (StockTrade trade : myTrades) {
             if (db.deleteTrade(trade.tradeId)) {
-                response.append("Deleted trade:\n" + trade.toString());
+                response.append("Deleted trade:\n").append(trade);
             } else {
-                response.append("Failed to delete trade:\n" + trade.toString());
+                response.append("Failed to delete trade:\n").append(trade);
             }
         }
         return response.toString();
@@ -180,12 +183,12 @@ public class StockCommands {
             return "You have no trade matching id: " + tradeId;
         }
         if (trade.buyer != 0 && trade.seller != 0) {
-            return "Your trade " + tradeId + " has already been finalized";
+            return "Your trade " + tradeId + " has already been finalized.";
         }
         if (db.deleteTrade(tradeId)) {
-            return "Deleted trade:\n" + trade.toString();
+            return "Deleted trade:\n" + trade;
         } else {
-            return "Failed to delete trade:\n" + trade.toString();
+            return "Failed to delete trade:\n" + trade;
         }
     }
 
@@ -202,11 +205,11 @@ public class StockCommands {
     private String info(@Me IMessageIO channel, StockDB db, @Me DBNation me, NationOrExchange nationOrExchange) {
         if (nationOrExchange.isExchange()) {
             Exchange exchange = nationOrExchange.getExchange();
-            if (!exchange.canView(me)) return "No permission for this exchange";
+            if (!exchange.canView(me)) return "No permission for this exchange.";
         }
         Map<Exchange, Long> myShares = db.getSharesByNation(nationOrExchange.getId());
         if (myShares.isEmpty()) {
-            return "You have no shares or resources in your account";
+            return "You have no shares or resources in your account.";
         }
 
         Map<ResourceType, Double> resourceShares = new LinkedHashMap<>();
@@ -227,7 +230,7 @@ public class StockCommands {
         if (!resourceShares.isEmpty()) {
             double rssValue = PnwUtil.convertedTotal(resourceShares);
             total += rssValue;
-            response.append("**Resources**: worth: ~$" + MathMan.format(rssValue)).append("\n");
+            response.append("**Resources**: worth: ~$").append(MathMan.format(rssValue)).append("\n");
             response.append(PnwUtil.resourcesToString(resourceShares)).append("\n");
         }
         long cutoff = System.currentTimeMillis() - TimeUnit.DAYS.toMillis(7);
@@ -238,7 +241,7 @@ public class StockCommands {
 
             total += valuePerShare * (shares / 100d);
 
-            response.append("**" + exchange.symbol + ":** " + MathMan.format(shares / 100d) + "\n");
+            response.append("**").append(exchange.symbol).append(":** ").append(MathMan.format(shares / 100d)).append("\n");
         }
 
         String title = nationOrExchange.getName() + " shares";
@@ -248,14 +251,14 @@ public class StockCommands {
         return null;
     }
 
-    @Command(aliases = {"info", "exchangeinfo"}, desc="Show general info about an exchange")
+    @Command(aliases = {"info", "exchangeinfo"}, desc = "Show general info about an exchange")
     public String info(@Me IMessageIO channel, StockDB db, Exchange exchange) {
         String body = exchange.toString();
-        channel.create().embed(exchange.symbol, body.toString()).send();
+        channel.create().embed(exchange.symbol, body).send();
         return null;
     }
 
-    @Command(aliases = {"exchanges", "search", "find", "companies"}, desc="List exchanges matching input")
+    @Command(aliases = {"exchanges", "search", "find", "companies"}, desc = "List exchanges matching input")
     public String exchanges(StockDB db, @Me DBNation me, String filter) {
         filter = filter.toLowerCase();
         List<String> equals = new ArrayList<>();
@@ -269,23 +272,17 @@ public class StockCommands {
             String nameBold = name.replaceAll("(?i)(" + filter + ")", "\\*\\*$1\\*\\*");
             if (entry.getKey().equalsIgnoreCase(filter)) {
                 equals.add("**" + name + "**");
-            }
-            else if (entry.getKey().toLowerCase().contains(filter)) {
+            } else if (entry.getKey().toLowerCase().contains(filter)) {
                 int distance = StringMan.getLevenshteinDistance(filter, name.toLowerCase());
                 matches.add(new AbstractMap.SimpleEntry<>(nameBold, distance));
             } else if (exchange.description.toLowerCase().matches(".*\b" + filter + "\b.*")) {
                 desc.add(exchange.symbol);
             }
         }
-        Collections.sort(matches, new Comparator<Map.Entry<String, Integer>>() {
-            @Override
-            public int compare(Map.Entry<String, Integer> o1, Map.Entry<String, Integer> o2) {
-                return Integer.compare(o1.getValue(), o2.getValue());
-            }
-        });
+        matches.sort(Comparator.comparingInt(Map.Entry::getValue));
         List<String> all = new ArrayList<>();
         all.addAll(equals);
-        all.addAll(matches.stream().map(f -> f.getKey()).collect(Collectors.toList()));
+        all.addAll(matches.stream().map(Map.Entry::getKey).toList());
         all.addAll(desc);
         if (!all.isEmpty()) {
             return "Matching exchanges:\n - " + StringMan.join(all, "\n - ");
@@ -323,8 +320,8 @@ public class StockCommands {
                 .addField("Selling", StringMan.join(highList, "\n"), true).build();
 
         channel.create().embed(embed)
-                        .commandButton(command, "Refresh")
-                                .send();
+                .commandButton(command, "Refresh")
+                .send();
         return null;
     }
 
@@ -340,15 +337,15 @@ public class StockCommands {
 
             Map.Entry<Long, Long> price = db.getCurrentPrice(type.ordinal());
             if (price.getKey() != null && (price.getKey() / 100d) > marketBuy) {
-                response.append("\nBuy " + type + " ingame @ $" + MathMan.format(marketBuy) + " and sell on exchange for $" + MathMan.format(price.getKey() / 100d));
+                response.append("\nBuy ").append(type).append(" ingame @ $").append(MathMan.format(marketBuy)).append(" and sell on exchange for $").append(MathMan.format(price.getKey() / 100d));
                 // buy ingame and sell stock
             }
             if (price.getValue() != null && (price.getValue() / 100d) < marketSell) {
-                response.append("\nBuy " + type + " on exchange @ $" + MathMan.format(price.getValue() / 100d) + " and sell on exchange for $" + MathMan.format(marketSell));
+                response.append("\nBuy ").append(type).append(" on exchange @ $").append(MathMan.format(price.getValue() / 100d)).append(" and sell on exchange for $").append(MathMan.format(marketSell));
                 // buy stock and sell ingame
             }
         }
-        if (response.length() == 0) return "Exchange prices all conform to ingame margins";
+        if (response.length() == 0) return "Exchange prices all conform to in-game margins.";
         return response.toString().trim();
     }
 
@@ -375,12 +372,12 @@ public class StockCommands {
         String refreshEmoji = "Refresh";
 
         channel.create().embed(
-                new EmbedBuilder().setTitle("Trade margin")
-        .addField("Exchange", StringMan.join(exchangeNames, "\n"), true)
-        .addField("Margin", StringMan.join(margin, "\n"), true).build()
+                        new EmbedBuilder().setTitle("Trade margin")
+                                .addField("Exchange", StringMan.join(exchangeNames, "\n"), true)
+                                .addField("Margin", StringMan.join(margin, "\n"), true).build()
                 )
-                        .commandButton(command, "Refresh")
-                                .send();
+                .commandButton(command, "Refresh")
+                .send();
         return null;
     }
 
@@ -436,28 +433,26 @@ public class StockCommands {
 
         HashMap<ResourceType, Double> totalVolume = new LinkedHashMap<>();
         for (ResourceType type : ResourceType.values()) {
-            double in  = inflows.getOrDefault(type, 0d);
-            double out  = outflow.getOrDefault(type, 0d);
+            double in = inflows.getOrDefault(type, 0d);
+            double out = outflow.getOrDefault(type, 0d);
             double total = Math.abs(in) + Math.abs(out);
             if (total != 0) totalVolume.put(type, total);
         }
 
-        StringBuilder response = new StringBuilder();
-        response
-                .append('\n').append("Buy (PPU):```")
-                .append(String.format("%16s", StringMan.getString(ppuBuy)))
-                .append("```")
-                .append(' ').append("Sell (PPU):```")
-                .append(String.format("%16s", StringMan.getString(ppuSell)))
-                .append("```")
-                .append(' ').append("Net inflows:```")
-                .append(String.format("%16s", StringMan.getString(netOutflows)))
-                .append("```")
-                .append(' ').append("Total Volume:```")
-                .append(String.format("%16s", StringMan.getString(totalVolume)))
-                .append("```");
-        response.append("Profit total: $").append(MathMan.format(profitTotal));
-        return response.toString().trim();
+        String response = '\n' + "Buy (PPU):```" +
+                String.format("%16s", StringMan.getString(ppuBuy)) +
+                "```" +
+                ' ' + "Sell (PPU):```" +
+                String.format("%16s", StringMan.getString(ppuSell)) +
+                "```" +
+                ' ' + "Net inflows:```" +
+                String.format("%16s", StringMan.getString(netOutflows)) +
+                "```" +
+                ' ' + "Total Volume:```" +
+                String.format("%16s", StringMan.getString(totalVolume)) +
+                "```" +
+                "Profit total: $" + MathMan.format(profitTotal);
+        return response.trim();
     }
 
     @Command(desc = "List average buy/sell price of an exchange over X days")
@@ -467,7 +462,8 @@ public class StockCommands {
         Map<Exchange, Double> low = new HashMap<>();
         Map<Exchange, Double> high = new HashMap<>();
         for (Exchange exchange : exchanges) {
-            if (!exchange.canView(me)) return exchange.name + " requires you to be " + exchange.requiredRank + " to view";
+            if (!exchange.canView(me))
+                return exchange.name + " requires you to be " + exchange.requiredRank + " to view";
             Map.Entry<Double, Double> price = db.getAveragePrice(exchange, time);
             if (price.getKey() != null) low.put(exchange, price.getKey());
             if (price.getValue() != null) high.put(exchange, price.getValue());
@@ -485,13 +481,13 @@ public class StockCommands {
         }
 
         channel.create().embed(new EmbedBuilder()
-                .setTitle("Trade average")
-                .addField("Exchange", StringMan.join(exchangeNames, "\n"), true)
-        .addField("Buying", StringMan.join(lowList, "\n"), true)
-        .addField("Selling", StringMan.join(highList, "\n"), true)
-                .build()
-        ).commandButton(command, "Refresh")
-                        .send();
+                        .setTitle("Trade average")
+                        .addField("Exchange", StringMan.join(exchangeNames, "\n"), true)
+                        .addField("Buying", StringMan.join(lowList, "\n"), true)
+                        .addField("Selling", StringMan.join(highList, "\n"), true)
+                        .build()
+                ).commandButton(command, "Refresh")
+                .send();
         return null;
     }
 
@@ -506,9 +502,9 @@ public class StockCommands {
 
         int perPage = 15;
         if (!onlySellOffers) {
-            if (buy.isEmpty()) result.append("No buy offers");
+            if (buy.isEmpty()) result.append("No buy offers.");
             else {
-                Collections.sort(buy, (o1, o2) -> Long.compare(o2.price, o1.price));
+                buy.sort((o1, o2) -> Long.compare(o2.price, o1.price));
                 String title = "Top Buy Offers";
                 List<String> results = new ArrayList<>();
 
@@ -522,9 +518,9 @@ public class StockCommands {
             }
         }
         if (!onlyBuyOffers) {
-            if (sell.isEmpty()) result.append("\nNo sell offers");
+            if (sell.isEmpty()) result.append("\nNo sell offers.");
             else {
-                Collections.sort(sell, Comparator.comparingLong(o -> o.price));
+                sell.sort(Comparator.comparingLong(o -> o.price));
                 String title = "Top Sell Offers";
                 List<String> results = new ArrayList<>();
 
@@ -544,7 +540,7 @@ public class StockCommands {
     public String mytrades(@Me IMessageIO channel, @Me JSONObject command, StockDB db, @Me DBNation nation, @Switch("b") boolean onlyBuyOffers, @Switch("s") boolean onlySellOffers, @Switch("p") int page) {
         ArrayList<StockTrade> trades = new ArrayList<>(db.getOpenTrades(nation.getNation_id()).values());
         if (trades.isEmpty()) return "No open trades";
-        Collections.sort(trades, (o1, o2) -> Double.compare(o2.date_offered, o1.date_offered));
+        trades.sort((o1, o2) -> Double.compare(o2.date_offered, o1.date_offered));
 
         List<StockTrade> buy = new ArrayList<>();
         List<StockTrade> sell = new ArrayList<>();
@@ -558,9 +554,9 @@ public class StockCommands {
 
         int perPage = 15;
         if (!onlySellOffers) {
-            if (buy.isEmpty()) result.append("No buy offers");
+            if (buy.isEmpty()) result.append("No buy offers.");
             else {
-                Collections.sort(buy, (o1, o2) -> Long.compare(o2.price, o1.price));
+                buy.sort((o1, o2) -> Long.compare(o2.price, o1.price));
                 String title = "Top Buy Offers";
                 List<String> results = new ArrayList<>();
 
@@ -574,9 +570,9 @@ public class StockCommands {
             }
         }
         if (!onlyBuyOffers) {
-            if (sell.isEmpty()) result.append("\nNo sell offers");
+            if (sell.isEmpty()) result.append("\nNo sell offers.");
             else {
-                Collections.sort(sell, Comparator.comparingLong(o -> o.price));
+                sell.sort(Comparator.comparingLong(o -> o.price));
                 String title = "Top Sell Offers";
                 List<String> results = new ArrayList<>();
 
@@ -599,12 +595,12 @@ public class StockCommands {
         trades.removeIf(f -> (f.is_buying ? f.buyer : f.seller) != id);
         if (trades.isEmpty()) return "No trade history";
 
-        Collections.sort(trades, (o1, o2) -> Double.compare(o2.date_bought, o1.date_bought));
+        trades.sort((o1, o2) -> Double.compare(o2.date_bought, o1.date_bought));
         List<String> results = new ArrayList<>();
 
         Map<Integer, Exchange> exchangeMap = new HashMap<>();
         for (StockTrade trade : trades) {
-            Exchange exchange = exchangeMap.computeIfAbsent(trade.company, f -> db.getExchange(f));
+            Exchange exchange = exchangeMap.computeIfAbsent(trade.company, db::getExchange);
             if (exchange != null && !exchange.canView(me)) continue;
             results.add(trade.toString());
         }
@@ -623,7 +619,7 @@ public class StockCommands {
         if (!exchange.canView(me)) return exchange.name + " requires you to be " + exchange.requiredRank + " to view";
 
         Map<Integer, Long> shareholders = db.getShareholdersByCorp(exchange.id);
-        if (shareholders.isEmpty()) return "No shareholders";
+        if (shareholders.isEmpty()) return "No shareholders.";
 
         List<String> results = new SummedMapRankBuilder<>(shareholders).sort().name(nationId -> PnwUtil.getName(nationId, false), f -> MathMan.format(f / 100d)).get();
 
@@ -639,7 +635,7 @@ public class StockCommands {
     @Command(desc = "List a nations shares")
     public String shares(@Me IMessageIO channel, @Me JSONObject command, StockDB db, NationOrExchange nation, @Switch("p") int page) {
         Map<Exchange, Long> shares = db.getSharesByNation(nation.getId());
-        if (shares.isEmpty()) return "No shareholders";
+        if (shares.isEmpty()) return "No shareholders.";
 
         List<String> results = new SummedMapRankBuilder<>(shares).sort().name(exchange -> exchange.symbol, f -> MathMan.format(f / 100d)).get();
 
@@ -656,16 +652,16 @@ public class StockCommands {
     // TODO withdraw from company to nation
 
     @Command(desc = "Give some of your shares to another nation")
-    @RolePermission(value={Roles.ECON}, root=true)
-    public String give(@Me IMessageIO channel, StockDB db, @Me DBNation me, NationOrExchange receiver, Exchange exchange, @Range(min=0.01) double amount, @Switch("f") boolean confirm, @Switch("a") boolean anonymous) {
+    @RolePermission(value = {Roles.ECON}, root = true)
+    public String give(@Me IMessageIO channel, StockDB db, @Me DBNation me, NationOrExchange receiver, Exchange exchange, @Range(min = 0.01) double amount, @Switch("f") boolean confirm, @Switch("a") boolean anonymous) {
         Map.Entry<Boolean, String> result = new NationOrExchange(me).give(me, receiver, exchange, amount, anonymous);
         return result.getValue();
     }
 
     @Command(desc = "Withdraw your cash/resources from the exchange")
     public String withdraw(@Me IMessageIO channel, @Me JSONObject command, StockDB db, @Me DBNation me, DBNation receiver, Map<ResourceType, Double> resources, @Switch("f") boolean force) throws IOException {
-        if (receiver.isBlockaded()) throw new IllegalArgumentException("Receiver is blockaded");
-        if (receiver.getVm_turns() != 0) throw new IllegalArgumentException("Receiver is on vacation mode");
+        if (receiver.isBlockaded()) throw new IllegalArgumentException("Receiver is blockaded.");
+        if (receiver.getVm_turns() != 0) throw new IllegalArgumentException("Receiver is on vacation mode.");
 
         if (!force) {
             String title = "Confirm transfer worth: $" + MathMan.format(PnwUtil.convertedTotal(resources));
@@ -748,6 +744,6 @@ public class StockCommands {
             List<StockTrade> trades = db.getTradesBoughtByCorp(exchange.id, time);
         }
         // TODO graph of price history
-        return "TODO graph of price history";
+        return "TODO graph of price history.";
     }
 }
